<resources>
    <string name="app_name">yan-News</string>
    <string name="desc">contentDescription</string>
    <string name="title_on_appbar">News for you</string>
    <string name="subtitle_on_appbar">Subtitle</string>
    <string name="priceIdr">Harga (IDR)</string>
    <string name="priceBtc">Harga (BTC)</string>
    <string name="volume">Volume</string>
    <string name="marketCap">Market Cap</string>
    <string name="twentyFourChange">24h % Change</string>
    <string name="sevenChange">7d % Change</string>
    <string name="pengingatHarian">Pengingat Harian</string>
    <string name="pengingatCategory">Pengingat Kategori</string>
    <string name="notification">Notification</string>
    <string name="ranking">Ranking</string>
    <string name="name">Nama</string>
    <string name="price">Harga</string>
    <string name="change">%Change</string>
    <string name="oneHundredTwenty">120</string>
    <string name="errorTitle">Error Title</string>
    <string name="errorMessage">Error Message</string>
    <string name="retry">Retry</string>
    <string name="author">Author</string>
    <string name="publishedAt">01 January 1990</string>
    <string name="source">Sumber</string>
    <string name="time">time</string>
    <string name="menu1">Berita Utama</string>
    <string name="menu2">Olahraga</string>
    <string name="menu3">Teknologi</string>
    <string name="menu4">Bisnis</string>
    <string name="menu5">Kesehatan</string>
    <string name="menu6">Entertaiment</string>
    <string name="share">Share</string>
    <string name="openWithBrowser">Open with browser</string>
    <string name="search">Search</string>

    <string name="policy">Privacy Policy</string>

    <string name="policyHead1">Privacy Policy</string>
    <string name="policyLine1">
        yan-F built the yan-News app as a Free app. This SERVICE is provided by yan-F at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at yan-News unless otherwise defined in this Privacy Policy.
    </string>

    <string name="policyHead2">Information Collection and Use</string>
    <string name="policyLine2">
        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Email : villian919@gmail.com. The information that I request will be retained on your device and is not collected by me in any way.\n\nThe app does use third-party services that may collect information used to identify you. Link to the privacy policy of third-party service providers used by the app\n
    </string>
    <string name="googlePlayService"><a href="https://www.google.com/policies/privacy/">Google Play Services</a></string>

    <string name="policyHead3">Log Data</string>
    <string name="policyLine3">
        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
    </string>

    <string name="policyHead4">Cookies</string>
    <string name="policyLine4">
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
    </string>

    <string name="policyHead5">Service Providers</string>
    <string name="policyLine5">
        I may employ third-party companies and individuals due to the following reasons:\n
    </string>
    <string name="policyLine5.0">To facilitate our Service.</string>
    <string name="policyLine5.1">To provide the Service on our behalf.</string>
    <string name="policyLine5.2">To perform Service-related services or</string>
    <string name="policyLine5.3">To assist us in analyzing how our Service is used.</string>
    <string name="policyLine5.4">
        I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
    </string>

    <string name="policyHead6">Security</string>
    <string name="policyLine6">
        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
    </string>

    <string name="policyHead7">Links to Other Sites</string>
    <string name="policyLine7">
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
    </string>

    <string name="policyHead8">Children’s Privacy</string>
    <string name="policyLine8">
        These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
    </string>

    <string name="policyHead9">Changes to This Privacy Policy</string>
    <string name="policyLine9">
       I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n\nThis policy is effective as of 2022-08-08.
    </string>

    <string name="policyHead10">Contact Us</string>
    <string name="policyLine10">
       If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at villian919@gmail.com.
    </string>

    <string name="nameContactUs">villian919@gmail.com</string>
    <string name="typeContactUs">email</string>
</resources>