<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen10"
        android:layout_marginTop="@dimen/dimen10"
        android:text="@string/notification"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen20"
            android:text="@string/pengingatHarian"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/swDailyReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dimen20"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen20"
            android:text="@string/pengingatCategory"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/swReleaseToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dimen20"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen10"
        android:layout_marginTop="@dimen/dimen10"
        android:text="@string/policy"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/policya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginBottom="@dimen/dimen20"
        android:layout_marginStart="@dimen/dimen20"
        android:text="@string/policy"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen10"
        android:text="@string/policyHead10"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:gravity="center">

        <TextView
            android:id="@+id/ctc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen20"
            android:text="@string/nameContactUs"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_toEndOf="@+id/ctc"
            android:gravity="end"
            android:text="@string/typeContactUs"
            android:textColor="@color/colorTextSubtitle" />

    </RelativeLayout>
</LinearLayout>