<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="@dimen/dimen8">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen8"
        android:paddingLeft="@dimen/dimen5"
        android:paddingRight="@dimen/dimen5"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/dimen35"
        android:layout_height="@dimen/dimen35"
        android:layout_marginStart="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen8"
        android:contentDescription="@string/desc"
        android:src="@drawable/ic_baseline_currency_bitcoin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="@dimen/dimen25"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen8"
        android:gravity="center"
        android:text="@string/oneHundredTwenty"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen24"
        android:layout_marginBottom="@dimen/dimen8"
        android:text="@string/price"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/percentage_change"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentage_change"
        android:layout_width="@dimen/dimen45"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen8"
        android:gravity="right"
        android:text="@string/change"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>
